--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,8 @@
     "jquery-colorbox": "~1.6.1",
     "jquery-ui": "~1.11.4",
     "jquery": "~2.1.4",
-    "lodash": "^3.7.0"
+    "lodash": "^3.7.0",
+    "jquery-ui-rotatable": "~1.0.1",
+    "jquery.transit": "~0.9.12"
   }
 }
